[gd_scene load_steps=2 format=3 uid="uid://brm8c3tgsg5sn"]

[ext_resource type="Script" path="res://main.gd" id="1_cgtjc"]

[node name="Main" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cgtjc")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 101.0

[node name="PortInput" type="LineEdit" parent="Menu"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 31.0
text = "9999"
placeholder_text = "Port"
caret_blink = true
caret_blink_interval = 0.5

[node name="AddressInput" type="LineEdit" parent="Menu"]
layout_mode = 2
offset_top = 35.0
offset_right = 1152.0
offset_bottom = 66.0
text = "localhost"
placeholder_text = "Address"
caret_blink = true
caret_blink_interval = 0.5

[node name="Join" type="Button" parent="Menu"]
layout_mode = 2
offset_top = 70.0
offset_right = 1152.0
offset_bottom = 101.0
text = "Join"

[node name="ListPlayers" type="Button" parent="."]
layout_mode = 2
offset_top = 105.0
offset_right = 1152.0
offset_bottom = 136.0
text = "List Players"

[node name="PeerId" type="LineEdit" parent="."]
layout_mode = 2
offset_top = 140.0
offset_right = 1152.0
offset_bottom = 171.0
placeholder_text = "Peer ID"

[node name="Kick" type="Button" parent="."]
layout_mode = 2
offset_top = 175.0
offset_right = 1152.0
offset_bottom = 206.0
text = "Kick"

[node name="AdminPassword" type="LineEdit" parent="."]
layout_mode = 2
offset_top = 210.0
offset_right = 1152.0
offset_bottom = 241.0
placeholder_text = "Admin Password"

[connection signal="pressed" from="Menu/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="ListPlayers" to="." method="_on_list_players_pressed"]
[connection signal="pressed" from="Kick" to="." method="_on_kick_pressed"]
